--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,7 @@ body {
     height: 100vh;
     flex-flow: column;
 }
-
-.caja {
-    background-color: gold;
-    width: 400px;
-    height: 400px;
+.header {
+    background: gold;
+    height: 4em;
 }
